<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/main_iv_icon_fb"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/fb_icon"
        app:srcCompat="@drawable/fb"
        />

    <EditText
        android:id="@+id/main_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:autofillHints="email"
        android:padding="20dp"
        android:hint="@string/email_hint"
        android:background="@drawable/tv_light_bg"
        android:inputType="textEmailAddress"
        android:ems="10"
        />

    <EditText
        android:id="@+id/main_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:autofillHints="password"
        android:padding="20dp"
        android:hint="@string/password_hint"
        android:background="@drawable/tv_light_bg"
        android:inputType="textPassword"
        android:ems="10"
        />

    <Button
        android:id="@+id/main_bt_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="24sp"
        android:layout_margin="7dp"
        android:text="@string/Login"
        android:backgroundTint="@color/blue"
        />

    <TextView
        android:id="@+id/main_tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center|top"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:text="@string/forgot_password"
        />

    <Button
        android:id="@+id/main_bt_signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="7dp"
        android:background="@drawable/button_outline_bg"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/main_iv_meta_logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/meta_logo"
        app:srcCompat="@drawable/meta_light_logo"
        />


</LinearLayout>